# baramundi_MCP

./: .env.example  .gitignore  README.md  pyproject.toml
src/baramundi_mcp/: ad_client.py  client.py  macmon_client.py  server.py
src/baramundi_mcp/tools/: ad.py  compliance.py  devices.py  jobs.py  macmon.py  reports.py  updates.py
