[project]
name = "baramundi-mcp"
version = "0.1.0"
description = "MCP Server für das baramundi Management Center"
readme = "README.md"
authors = [
    { name = "mikewegmann", email = "mike.wegmann@schmitz-werke.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
baramundi-mcp = "baramundi_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
